显示个人信息界面

--- a/喜马拉雅/classes/discover(发现)/view/Hot Anchor(最火主播)/RCAnthorViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/Hot Anchor(最火主播)/RCAnthorViewCell.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14E17e" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14E33b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -11,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="477" height="240"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="477" height="239.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5lT-XZ-Q9B" userLabel="分割线">
@@ -36,7 +37,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FcT-bY-1AN">
                         <rect key="frame" x="8" y="56" width="148" height="173"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kdb-E5-qFd" userLabel="图标" customClass="RCAnthorImgeView">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kdb-E5-qFd" userLabel="图标" customClass="RCAnthorImgeView">
                                 <rect key="frame" x="8" y="8" width="138" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="Gxz-eN-A2F"/>
@@ -77,7 +78,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o74-Eh-BDb">
                         <rect key="frame" x="164" y="56" width="148" height="173"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rbh-bu-8QG" userLabel="图标" customClass="RCAnthorImgeView">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rbh-bu-8QG" userLabel="图标" customClass="RCAnthorImgeView">
                                 <rect key="frame" x="2" y="8" width="144" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="iGa-Tf-2DU"/>
@@ -118,7 +119,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uFP-41-rhD">
                         <rect key="frame" x="320" y="56" width="148" height="173"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGY-Le-r6e" userLabel="图标" customClass="RCAnthorImgeView">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cGY-Le-r6e" userLabel="图标" customClass="RCAnthorImgeView">
                                 <rect key="frame" x="2" y="8" width="138" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="90" id="oqw-KN-sDn"/>
