--- a/喜马拉雅/classes/搜索/view/user/RCUserInfoHeaderView.xib
+++ b/喜马拉雅/classes/搜索/view/user/RCUserInfoHeaderView.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E33b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14E33b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -30,16 +31,9 @@
                                 <action selector="share:" destination="b2h-9T-oeZ" eventType="touchUpInside" id="6T0-aN-lO5"/>
                             </connections>
                         </button>
-                        <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KHt-fq-4uB">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KHt-fq-4uB">
                             <rect key="frame" x="8" y="14" width="584" height="224"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qhB-t4-apo">
-                                    <rect key="frame" x="262" y="94" width="60" height="60"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="60" id="0Px-Te-lCV"/>
-                                        <constraint firstAttribute="width" constant="60" id="Hkq-J8-895"/>
-                                    </constraints>
-                                </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8jE-SP-MSr">
                                     <rect key="frame" x="271" y="172" width="42" height="20"/>
                                     <constraints>
@@ -62,6 +56,13 @@
                                     <color key="textColor" red="0.92156862750000001" green="0.96078431369999995" blue="1" alpha="0.96999999999999997" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qhB-t4-apo">
+                                    <rect key="frame" x="262" y="94" width="60" height="60"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="60" id="0Px-Te-lCV"/>
+                                        <constraint firstAttribute="width" constant="60" id="Hkq-J8-895"/>
+                                    </constraints>
+                                </imageView>
                             </subviews>
                             <constraints>
                                 <constraint firstAttribute="centerX" secondItem="qhB-t4-apo" secondAttribute="centerX" id="95P-mY-C1q"/>
@@ -210,7 +211,7 @@
                 <outlet property="shareButton" destination="5h9-xW-gZ7" id="6tp-DC-DjT"/>
                 <outlet property="zanButton" destination="GGG-7K-d99" id="R3s-5l-OPX"/>
             </connections>
-            <point key="canvasLocation" x="421" y="128"/>
+            <point key="canvasLocation" x="425" y="134"/>
         </view>
     </objects>
     <resources>
