--- a/喜马拉雅/classes/discover(发现)/view/Hot Anchor(最火主播)/RCAnthorViewCell.xib
+++ b/喜马拉雅/classes/discover(发现)/view/Hot Anchor(最火主播)/RCAnthorViewCell.xib
@@ -33,6 +33,9 @@
                             <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
+                        <connections>
+                            <action selector="titleButtonDidClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Avn-a0-lkX"/>
+                        </connections>
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FcT-bY-1AN">
                         <rect key="frame" x="8" y="56" width="148" height="173"/>
