--- a/喜马拉雅/classes/downlaod(下载听)/view/RCDownloadViewController.xib
+++ b/喜马拉雅/classes/downlaod(下载听)/view/RCDownloadViewController.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E26a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14E33b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7706"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8121.17"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RCDownloadViewController">
@@ -38,6 +39,7 @@
                 <constraint firstAttribute="trailing" secondItem="vhV-KC-8Ef" secondAttribute="trailing" id="wSh-75-tCs"/>
                 <constraint firstAttribute="trailing" secondItem="6c8-ei-E7M" secondAttribute="trailing" id="yw5-gn-x0u"/>
             </constraints>
+            <point key="canvasLocation" x="119" y="791"/>
         </view>
     </objects>
 </document>
